<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/nav_chi">

    <fragment
        android:id="@+id/nav_chi"
        android:name="com.example.asmfinal.fargment.KhoahocFragment"
        android:label="@string/kh"
        tools:layout="@layout/fragment_khoahoc" />
    <fragment
        android:id="@+id/nav_thu"
        android:name="com.example.asmfinal.fargment.MapsFragment"
        android:label="@string/máp"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/nav_thongke"
        android:name="com.example.asmfinal.fargment.NewsFragment"
        android:label="@string/gd"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/nav_gioithieu"
        android:name="com.example.asmfinal.fargment.LichFragment"
        android:label="@string/mxh"
        tools:layout="@layout/fragment_lich" />
    <fragment
        android:id="@+id/nav_thoat"
        android:name="com.example.asmfinal.fargment.ExitFragment"
        android:label="@string/exit"
        tools:layout="@layout/fragment_exit" />


</navigation>